--- a/bwapp2/client/views/gencmdexp.ng.jade
+++ b/bwapp2/client/views/gencmdexp.ng.jade
@@ -54,15 +54,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
   .row-fluid.col-sm-6(ng-show='isgen || curState.block_meta.blocks')
     h3 Scene
     div.col-sm-12
-      b(ng-show='curcnt > -1', style='font-size:1.25em') Create Count: {{curcnt}}
-      br
-      b(ng-show='curitr > -1', style='font-size:1.25em') Current State: {{curitr}}
-    //-div.col-sm-5
-      | Move camera by clicking and dragging in scene
-    div.col-sm-12
       canvas(id="renderCanvasBab", style='width: 480px; height: 360px;')
-      canvas(id="canvas_2D")
-    div.col-sm-12(ng-if='!isgen && isExp && curState.block_meta.blocks')
+    //-div.col-sm-12(ng-if='!isgen && isExp && curState.block_meta.blocks')
       label Command:
       textarea.form-control.mb(type='text', ng-model='command', style='padding-left: 26px;')
       button.btn.btn-sm.btn-info.mb-sm(ng-click='submit(command)') Submit
