--- a/bwapp2/client/views/gencmdjobs.ng.jade
+++ b/bwapp2/client/views/gencmdjobs.ng.jade
@@ -21,7 +21,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       input(ng-model='btreason')
       button.btn(ng-show='btid.length && btreason.length', ng-click='blockTurker(btid, btreason)') Go
     .well.col-sm-6
-      label Job Id(s): 
+      label Live HIT Payment Job Id(s): 
       input(ng-model='jid', style='width:80%')
       button.btn(ng-show='jid.length', ng-click='getURLHITs(jid)') Go
   .row
@@ -116,9 +116,8 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       table.table.table-condensed(ng-show='dataloaded', datatable="ng", dt-options="dtOptionsGrp")
         thead
           tr
-            th
-            th Job
             th Created
+            th Job
             th Cmd
             th Info
             th HITs
@@ -129,10 +128,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
                 .fa.fa-remove
               | &nbsp;&nbsp;
               button.btn.btn-xs(ng-click='createHIT(job._id)') Create HIT
+              | &nbsp; {{job.created | date:"yyyy/MM/dd HH:mm" }}
             td(ng-click="stateGo('gencmdtask', {taskId: job._id, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
               | &nbsp;{{job._id}}
-            td {{job.created | date:"yyyy/MM/dd HH:mm" }}
             td(title='{{job.cmdid}}', ng-click='showState(job.cmdid)') {{job.cmdid}}
             td 
               | Ant:
@@ -145,7 +144,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
                   .fa.fa-remove
                 | &nbsp;&nbsp;{{hit}} 
 
-.row
+//-.row
   accordion.col-sm-12
     accordion-group.panel-primary.shadowbox(ng-if='jobinfo', ng-init="isOpen = true", is-open="isOpen")
       accordion-heading
@@ -156,7 +155,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         thead
           tr
             th
-            th Task Id
+            th Job
             th Info
             th HITs
         tbody
@@ -177,31 +176,33 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
             th Created
             th HIT
             th Info
-            th Task
             th Job
             th Cmd
             th Turker
         tbody
           tr(ng-repeat='task in allHITs.active')
             td
-              button.btn.btn-xs.btn-danger(ng-click='remHIT(task.tid, "H_"+task.hid)', title='Remove HIT {{task.hid}} from {{task.tid}}')
+              button.btn.btn-xs.btn-danger(ng-click='remHIT(task.jid, "H_"+task.hid)', title='Remove HIT {{task.hid}} from {{task.jid}}')
                 .fa.fa-remove
+              | &nbsp;&nbsp;
+              button.btn.btn-xs(ng-click='shareHIT("H_"+task.hid)', title='Share HIT {{task.hid}}')
+                .fa.fa-share
               | &nbsp;&nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
             td
-              a(href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
-                b(ng-show='task.islive', style='color:green') Live
-                span(ng-show='!task.islive', style='color:grey') Sandbox
+              a(ng-show='task.islive', href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                b(style='color:green') Live
+              a(ng-show='!task.islive', href='https://requestersandbox.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                span(style='color:grey') Sandbox
             td Asn: {{task.asnleft}} &nbsp; {{task.reward.Amount | currency: '$'}}
-            td(ng-click="stateGo('gencmdtask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
+            td(ng-click="stateGo('gencmdtask',{taskId: task.jid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
-              | &nbsp;{{task.tid}}
-            td {{task.jid}}
+              | &nbsp;{{task.jid}}
             td {{task.cid}}
             td
               span(ng-repeat='n in task.names')
-                button.btn.btn-xs.btn-default(ng-click="stateGo('gencmdtask',{taskId: task.tid, workerId: n, hitId: task.hid, report: 1}, true)")
+                button.btn.btn-xs.btn-default(ng-click="stateGo('gencmdtask',{taskId: task.jid, workerId: n, hitId: task.hid, report: 1}, true)")
                   i.fa.fa-eye
-                  | &nbsp;{{n}}
+                  | &nbsp;{{n | uriCompDec}}
                 | &nbsp;&nbsp;
 
 .row
@@ -230,19 +231,20 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
                 .fa.fa-thumbs-up
               | &nbsp;{{task.time | date:"yyyy/MM/dd HH:mm"}}
             td
-              a(href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
-                b(ng-show='task.islive', style='color:green') Live
-                span(ng-show='!task.islive', style='color:grey') Sandbox
-            td(ng-click="stateGo('gencmdtask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
+              a(ng-show='task.islive', href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                b(style='color:green') Live
+              a(ng-show='!task.islive', href='https://requestersandbox.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                span(style='color:grey') Sandbox
+            td(ng-click="stateGo('gencmdtask',{taskId: task.jid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
-              | &nbsp;{{task.tid}}
+              | &nbsp;{{task.jid}}
             td {{task.jid}}
             td {{task.cid}}
             td
               span(ng-repeat='n in task.names')
-                button.btn.btn-xs.btn-default(ng-click="stateGo('gencmdtask',{taskId: task.tid, workerId: n, hitId: task.hid, report: 1}, true)")
+                button.btn.btn-xs.btn-default(ng-click="stateGo('gencmdtask',{taskId: task.jid, workerId: n, hitId: task.hid, report: 1}, true)")
                   i.fa.fa-eye
-                  | &nbsp;{{n}}
+                  | &nbsp;{{n | uriCompDec}}
                 | &nbsp;&nbsp;
 
 .row
@@ -256,31 +258,45 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         thead
           tr
             th Done
-            th HIT Id
-            th Task Id
+            th HIT
+            th Job
             th Turker
         tbody
           tr(ng-repeat='task in allHITs.doneASNs')
             td {{task.time | date:"yyyy/MM/dd HH:mm"}}
-            td {{task.hid}}  
-              b(ng-show='task.islive', style='color:green') Live
-              span(ng-show='!task.islive', style='color:grey') Sandbox
-            td(ng-click="stateGo('gencmdtask',{taskId: task.tid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
+            td
+              a(ng-show='task.islive', href='https://requester.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                b(style='color:green') Live
+              a(ng-show='!task.islive', href='https://requestersandbox.mturk.com/mturk/manageHIT?viewableEditPane=&HITId={{task.hid}}', target='_blank') {{task.hid}}  
+                span(style='color:grey') Sandbox
+            td(ng-click="stateGo('gencmdtask',{taskId: task.jid, assignmentId: 'ASSIGNMENT_ID_NOT_AVAILABLE', workerId: 'EXAMPLE'}, true)")
               i.fa.fa-eye
-              | &nbsp;{{task.tid}}
-            td(ng-click="stateGo('gencmdtask',{taskId: task.tid, workerId: task.name, hitId: task.hid, report: 1}, true)")
-              i.fa.fa-eye
-              | &nbsp;{{task.name}} 
+              | &nbsp;{{task.jid}}
+            td
+              button.btn.btn-xs.btn-default(ng-click="stateGo('gencmdtask',{taskId: task.jid, workerId: task.name, hitId: task.hid, report: 1}, true)")
+                i.fa.fa-eye
+                | &nbsp;{{task.name | uriCompDec}}
 
 script#didTurkURLs(type="text/ng-template")
   form.form-inline.ng-pristine.ng-valid(role="form",novalidate, name='turkurls', ng-submit='closeThisDialog()')
     //pre {{ngDialogData}}
     h4 Tasks for Jobs:
     .form-group(ng-repeat='n in ngDialogData')
-      a(href='{{n.url}}', target='_blank')  J:{{n.jid}} T:{{n.tid}} H:{{n.hid}}
+      a(href='{{n.url}}', target='_blank')  J:{{n.jid}} H:{{n.hid}}
       br
     //-.form-group
       input.form-control(type="text", placeholder="Recording Name", required, ng-minlength="4" ng-model='savename', name="name")
       button.btn.btn-default(ng-show='replayname.$valid', type="submit") Save
       label.error(style='color:red', ng-show="replayname.name.$error.required", title='Required field') *Required 
       label.error(style='color:red', ng-show="replayname.name.$error.minlength", title='Must have at least 4 characters') Too short!
+script#didShareURL(type="text/ng-template")
+  form.form-inline.ng-pristine.ng-valid(role="form",novalidate, name='shareurl', ng-submit='closeThisDialog()')
+    //-pre {{ngDialogData}}
+    h4 Job Share Link:
+    .form-group(ng-repeat='n in ngDialogData')
+      a(href='{{n.url}}', target='_blank')  {{n.HITId}}  
+        b(ng-show='n.islive', style='color:green') Live
+        span(ng-show='!n.islive', style='color:grey') Sandbox
+      button.btn.clipbtn(data-clipboard-text="{{n.url}}") 
+        i.fa.fa-copy  Copy
+      br
