fix out of bounds message spinning work issue

--- a/bwapp2/client/views/gencmdjobs.ng.jade
+++ b/bwapp2/client/views/gencmdjobs.ng.jade
@@ -298,5 +298,6 @@ script#didShareURL(type="text/ng-template")
         b(ng-show='n.islive', style='color:green') Live
         span(ng-show='!n.islive', style='color:grey') Sandbox
       button.btn.clipbtn(data-clipboard-text="{{n.url}}") 
-        i.fa.fa-copy  Copy
+        i.fa.fa-copy
+          |  Copy
       br
