fixed lettering in logo

--- a/bwapp2/client/views/partials/top-navbar.ng.jade
+++ b/bwapp2/client/views/partials/top-navbar.ng.jade
@@ -6,7 +6,8 @@ nav.navbar.topnavbar(role="navigation")
   .navbar-header
     a.navbar-brand(href="/")
       .brand-logo(style="font-size:1em; color:white;")
-        span.fa.fa-cubes  CWC ISI
+        span.fa.fa-cubes
+        |  CWC ISI
         // img src="img/logo.png" alt="App Logo" class="img-responsive" /
       .brand-logo-collapsed(style="font-size:1.8em; color:white;")
         span.fa.fa-cubes
