--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -5,13 +5,17 @@
 toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'close-button':true}")
 .row-fluid.col-sm-12
   .row.mb-sm(ng-show='!curState.block_meta.blocks')
-    .content.col-sm-3
+    .content.col-sm-4
       button.btn.btn-default(ng-click='opt.showImages=!opt.showImages')
-        .fa.fa-toggle-on(ng-show='opt.showImages') &nbsp;On Images
-        .fa.fa-toggle-off(ng-show='!opt.showImages') &nbsp;Off Images
+        .fa.fa-toggle-on(ng-show='opt.showImages')
+          | &nbsp;On Images
+        .fa.fa-toggle-off(ng-show='!opt.showImages')
+          | &nbsp;Off Images
       button.btn.btn-default(ng-if='opt.showImages', ng-click='opt.showLogos=!opt.showLogos')
-        .fa.fa-toggle-on(ng-show='opt.showLogos') &nbsp;On Logos
-        .fa.fa-toggle-off(ng-show='!opt.showLogos') &nbsp;Off Logos
+        .fa.fa-toggle-on(ng-show='opt.showLogos')
+          | &nbsp;On Logos
+        .fa.fa-toggle-off(ng-show='!opt.showLogos')
+          | &nbsp;Off Logos
   div(ng-show='curState.block_meta.blocks')
     h4 Active State: {{curState._id}} &nbsp;&nbsp; {{curState.name}}
     h4 # Moves: {{curState.block_states.length}} &nbsp; # Blocks: {{curState.block_meta.blocks.length}}
@@ -127,7 +131,15 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       h4 State
       //-button.btn.btn-sm.btn-info.mb-sm(ng-if='!isgen && !enableImpSave && !curState._id && curState.block_meta.blocks', ng-click='startGen()') Create Layout
       //-br(ng-if='!isgen && !enableImpSave && !curState._id && curState.block_meta.blocks')
+      button.btn.btn-default.mb-sm(ng-click='updatePhysics()')
+        .fa.fa-toggle-on(ng-show='opt.hasPhysics')
+          | &nbsp;On Physics
+        .fa.fa-toggle-off(ng-show='!opt.hasPhysics')
+          | &nbsp;Off Physics
+      br
       button.btn.btn-sm.btn-info.mb-sm(ng-show='opt.enableUI' ng-click='saveState()') Capture Frame
+      | &nbsp;&nbsp;
+      button.btn.btn-sm.btn-info.mb-sm(ng-show='opt.enableUI' ng-click='resetState()') Reset Frame
       br
       button.btn.btn-sm.btn-info.mb-sm(ng-click='dlScene()') Get JSON
       br
