--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -25,7 +25,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
       button.btn.btn-xs.btn-default {{block.id}} &nbsp; {{block.name | uppercase}}
     div
       button.btn.btn-primary(ng-click='clearMeta()') Reset
-  tabset(ng-show='!curState.block_meta.blocks && !opt.enableUI')
+  tabset(ng-show='!curState.block_meta.blocks && !enableUI')
     tab(heading='Create Block Actions', active=true)
       .row
         .content.col-sm-4.mb-sm
@@ -105,21 +105,21 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
         button.btn.btn-default(ng-show='mvcnt', type='submit') Go
   .row-fluid.col-sm-3(ng-if='!isgen && !enableImpSave && curState.block_meta.blocks')
     .row
-      #panelInst.panel.panel-default.notouch.shadowbox(ng-show='opt.enableUI', style='background-color: rgba(255,255,255,0.5)')
+      #panelInst.panel.panel-default.notouch.shadowbox(ng-show='enableUI', style='background-color: rgba(255,255,255,0.5)')
         .panel-heading(ng-class="{'panel-heading-collapsed':panelInst}", style='background-color: rgba(255,255,255,0.0)')
           strong Navigation
           paneltool(tool-collapse, ng-init="panelInst=false")
         .panel-wrapper(collapse="panelInst")
           .panel-body
-            //-strong Move Camera: 
-              | Use WASD keys
-              br
+            strong Move Camera: 
+            | Use WASD keys
+            br
+            strong Point Camera: 
+            | Click and move mouse to pivot camera
+            br
             strong Move Blocks: 
             | Click and hold to drag and drop blocks
             br
-            //-strong Point Camera: 
-              | Click and move mouse to pivot camera
-              br
             strong Move Up/Down: 
             | Hold block, then press SHIFT key
             br
@@ -136,10 +136,12 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           | &nbsp;On Physics
         .fa.fa-toggle-off(ng-show='!opt.hasPhysics')
           | &nbsp;Off Physics
+      | &nbsp; &nbsp;
+      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='resetCamera()') Reset Camera
       br
-      button.btn.btn-sm.btn-info.mb-sm(ng-show='opt.enableUI' ng-click='saveState()') Capture Frame
+      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='saveState()') Capture Frame
       | &nbsp;&nbsp;
-      button.btn.btn-sm.btn-info.mb-sm(ng-show='opt.enableUI' ng-click='resetState()') Reset Frame
+      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='resetState()') Reset Frame
       br
       button.btn.btn-sm.btn-info.mb-sm(ng-click='dlScene()') Get JSON
       br
