--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -151,10 +151,10 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           option(ng-repeat='a in ["X","Y","Z"]', value='{{a}}') {{a}}
         span(ng-show='axs')
           input(type='number', ng-model='deg', placeholder='number deg', style='width:20%')
-          button.btn.btn-sm.btn-primary(ng-show='deg' ng-click='rotCube(rotid, axs, deg)') Go
+          button.btn.btn-xs.btn-primary(ng-show='deg' ng-click='rotCube(rotid, axs, deg)') Go
           | &nbsp;&nbsp;
-          button.btn.btn-sm.btn-danger(ng-show='deg' ng-click='rotid=0; axs=""; deg=undefined;')
-            i.fa.fa-remove
+        button.btn.btn-xs.btn-danger(ng-click='rotid=0; axs=""; deg=undefined;')
+          i.fa.fa-remove
       br
       label *Delete Cube:
       select(ng-model = "delid" ng-change="hideCube(delid)")
