--- a/bwapp2/client/views/genworld.ng.jade
+++ b/bwapp2/client/views/genworld.ng.jade
@@ -66,7 +66,7 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
 .row-fluid.col-sm-12
   .row-fluid.col-sm-6
     h3 Scene
-    div.col-sm-7
+    div.col-sm-7(ng-show='curState.block_meta.blocks && !enableUI')
       b(ng-show='curcnt > -1', style='font-size:1.25em') Create Count: {{curcnt}}
       br
       b(ng-show='curitr > -1', style='font-size:1.25em') Current State: {{curitr}}
@@ -130,37 +130,39 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
     .row.well
       //-button.btn.btn-sm.btn-info.mb-sm(ng-if='!isgen && !enableImpSave && !curState._id && curState.block_meta.blocks', ng-click='startGen()') Create Layout
       //-br(ng-if='!isgen && !enableImpSave && !curState._id && curState.block_meta.blocks')
-      button.btn.btn-default.mb-sm(ng-click='updatePhysics()')
-        .fa.fa-toggle-on(ng-show='opt.hasPhysics')
-          | &nbsp;On Physics
-        .fa.fa-toggle-off(ng-show='!opt.hasPhysics')
-          | &nbsp;Off Physics
-      | &nbsp; &nbsp;
-      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='resetCamera()') Reset Camera
-      br
-      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='saveState()') Capture Frame
-      | &nbsp;&nbsp;
-      button.btn.btn-sm.btn-info.mb-sm(ng-show='enableUI' ng-click='resetState()') Reset Frame
-      br
-      label Rotate Cube:
-      select(ng-model = "rotid")
-        option(ng-repeat='b in enabledCubes', value='{{b.id}}') {{b.name}}
-      div(ng-show='rotid')
-        label Axis:
-        select(ng-model = "axs")
-          option(ng-repeat='a in ["X","Y","Z"]', value='{{a}}') {{a}}
-        span(ng-show='axs')
-          input(type='number', ng-model='deg', placeholder='number deg', style='width:20%')
-          button.btn.btn-xs.btn-primary(ng-show='deg' ng-click='rotCube(rotid, axs, deg)') Go
-          | &nbsp;&nbsp;
-        button.btn.btn-xs.btn-danger(ng-click='rotid=0; axs=""; deg=undefined;')
-          i.fa.fa-remove
-      br
-      label *Delete Cube:
-      select(ng-model = "delid" ng-change="hideCube(delid)")
-        option(ng-repeat='b in enabledCubes', value='{{b.id}}') {{b.name}}
-      br
-      i(style="color:red") *Scene resets on cube delete
+      span(ng-if='enableUI')
+        button.btn.btn-default.mb-sm(ng-click='updatePhysics()')
+          .fa.fa-toggle-on(ng-show='opt.hasPhysics')
+            | &nbsp;On Physics
+          .fa.fa-toggle-off(ng-show='!opt.hasPhysics')
+            | &nbsp;Off Physics
+        | &nbsp; &nbsp;
+        button.btn.btn-sm.btn-info.mb-sm(ng-click='resetCamera()') Reset Camera
+        br
+        button.btn.btn-sm.btn-info.mb-sm(ng-click='saveState()') Capture Frame
+        | &nbsp;&nbsp;
+        button.btn.btn-sm.btn-info.mb-sm(ng-click='resetState()') Reset Frame
+        br
+        label Rotate Cube:
+        select(ng-model = "rotid")
+          option(ng-repeat='b in enabledCubes', value='{{b.id}}') {{b.name}}
+        div(ng-show='rotid')
+          label Axis:
+          select(ng-model = "axs")
+            option(ng-repeat='a in ["X","Y","Z"]', value='{{a}}') {{a}}
+          span(ng-show='axs')
+            input(type='number', ng-model='deg', placeholder='number deg', style='width:20%')
+            button.btn.btn-xs.btn-primary(ng-show='deg' ng-click='rotCube(rotid, axs, deg)') Go
+            | &nbsp;&nbsp;
+          button.btn.btn-xs.btn-danger(ng-click='rotid=0; axs=""; deg=undefined;')
+            i.fa.fa-remove
+        br
+        label *Delete Cube:
+        select(ng-model = "delid" ng-change="hideCube(delid)")
+          option(ng-repeat='b in enabledCubes', value='{{b.id}}') {{b.name}}
+        br
+        i(style="color:red") *Scene resets on cube delete
+        hr
       //-form.form-inline.ng-pristine.ng-valid(name='myshowform', ng-submit='showState(sid)')
         .form-group
           label Show:
@@ -172,7 +174,6 @@ toaster-container(toaster-options="{'position-class': 'toast-bottom-right', 'clo
           label Test Move:
           input(type='text', ng-model='tsid', placeholder='state id')
           input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
-      hr
       button.btn.btn-sm.btn-info.mb-sm(ng-click='dlScene()') Get JSON
       br
       form.form-inline.ng-pristine.ng-valid(name='myremform', ng-submit='remState(rsid)')
